--- a/contact.html
+++ b/contact.html
@@ -6,25 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Contact Info</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <style>
-	    body{
-	    	background-image: url(assets/cliffs.jpg);
-	    	background-size:cover;
-	    }
-	    hr{
-	    	background: white;	
-	    }
-
-		.content-box{
-			background:rgba(0,0,0, .6);
-			color:white;
-			margin-top: 80px;
-			padding: 20px;
-			box-shadow: 0px 0px 10px 3px grey;
-		}
-   </style>
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="contact.js"></script>
 </head>
 
 <body>
@@ -52,31 +36,32 @@
 
     <section class="container content-box">
         <h1>Contact form</h1>
+        <div class="status"></div>
         <hr>
 
         <div class="row">
 
-            <div class="col-md-6">
+            <form action="https://formspree.io/tylerinkbroeker@gmail.com" method="POST" class="col-md-6">
                 <div class="form-group">
                     <label>Name</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="name form-control">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="email form-control">
                 </div>
                 <div class="form-group">
                     <label>Subject</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="subject form-control">
                 </div>
                 <div class="form-group">
                     <label>Message</label>
-                    <textarea class="form-control" rows="5"></textarea>
+                    <textarea class="message form-control" rows="5"></textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block">Send</button>
+                    <button type="submit" class="submit btn btn-primary btn-block">Send</button>
                 </div>
-            </div>
+              </form>
             <div class="col-md-6">
                 
             </div>
