--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <style>
-	    body{
-	    	background-image: url(assets/cliffs.jpg);
-	    	background-size:cover;
-	    }
-	    hr{
-	    	background: white;	
-	    }
-
-		.content-box{
-			background:rgba(0,0,0, .6);
-			color:white;
-			margin-top: 80px;
-			padding: 20px;
-			box-shadow: 0px 0px 10px 3px grey;
-		}
-   </style>
-    
+    <link rel="stylesheet" href="style.css">
+ 
 </head>
 
 <body>
