added footer with links to linkdin and github, started portfolio page of working apps with images

--- a/index.html
+++ b/index.html
@@ -53,8 +53,20 @@
         </main>
 
       </section>
-    <!--Footer-->
-    
+
+    <footer class="content-box page-footer pt-4 text-center">
+      <div class="container">
+        <span>
+        <a href="https://github.com/TylerinkBroeker">
+          <img src="assets/github.png" height="50px" width="50px" alt="GitHub">
+        </a>
+
+        <a href="https://www.linkedin.com/in/tyler-broeker-6489881a4/">
+          <img src="assets/linkedin.png" height="50px" width="50px" alt="LinkedIn">
+        </a>
+      </span>
+      </div>
+    </footer>
 
 
 </body>
