--- a/portfolio.html
+++ b/portfolio.html
@@ -34,29 +34,52 @@
     <section class="container content-box">
         <h1>My Portfolio</h1>
         <hr>
-        <main class="row">
+        <main class="row text-center">
             <div class="col-sm-4">
-                <a href="https://github.com/TylerinkBroeker">
-                <img src="assets/github.png" height="150px" width="180px" alt="web design work">
-                <p>Github</p>
+                <a href="https://alexastef.github.io/ThatsTheSpirit/">
+                <img src="assets/theSpirit.png" height="150px" width="180px" alt="web design work">
+                <p>That's The Spirit</p>
+                </a>
+                <a href="https://github.com/alexastef/ThatsTheSpirit">
+                  <p>GitHub Repository</p>
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="https://www.linkedin.com/in/tyler-broeker-6489881a4/">
-                <img src="assets/linkedin.png" height="150px" width="180px" alt="game design work">
-                <p>Linkdin</p>
+                <a href="https://secure-brushlands-04759.herokuapp.com/">
+                <img src="assets/subscriptionTracker.PNG" height="150px" width="180px" alt="game design work">
+                <p>Bill and Subscription Tracker</p>
+                </a>
+                <a href="https://github.com/blakshep1981/Bill-and-Subscription-Reminder-Application">
+                  <p>GitHub Repository</p>
                 </a>
             </div>
-            <!-- <div class="col-sm-4">
-                <a href="upcomingfeatures.html">
-                <img src="assets/paintbrush.png" height="150px" width="180px" alt="art">
-                <p>Art</p>
-                </a>
-            </div> -->
+
+            <div class="col-sm-4">
+              <a href="https://boxing-beaver-85498.herokuapp.com/">
+              <img src="assets/burger.png" height="150px" width="180px" alt="game design work">
+              <p>Devour The Burger!</p>
+              </a>
+              <a href="https://github.com/TylerinkBroeker/burger.homework13">
+              <p>GitHub Repository</p>
+              </a>
+            </div>
+
         </main>
-
-
     </section>
+
+    <footer class="content-box page-footer pt-4 text-center">
+      <div class="container">
+        <span>
+        <a href="https://github.com/TylerinkBroeker">
+          <img src="assets/github.png" height="50px" width="50px" alt="GitHub">
+        </a>
+
+        <a href="https://www.linkedin.com/in/tyler-broeker-6489881a4/">
+          <img src="assets/linkedin.png" height="50px" width="50px" alt="LinkedIn">
+        </a>
+      </span>
+      </div>
+    </footer>
 
 </body>
 
