added some images and added to portfolio, added some css styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,18 +35,19 @@
         <h1>My Portfolio</h1>
         <hr>
         <main class="row text-center">
-            <div class="col-sm-4">
+            <div class="portfolio-item col-sm-4">
                 <a href="https://alexastef.github.io/ThatsTheSpirit/">
-                <img src="assets/theSpirit.png" height="150px" width="180px" alt="web design work">
+                <img src="assets/theSpirit.png" height="150px" width="180px" alt="the spirit">
                 <p>That's The Spirit</p>
                 </a>
                 <a href="https://github.com/alexastef/ThatsTheSpirit">
                   <p>GitHub Repository</p>
                 </a>
             </div>
-            <div class="col-sm-4">
+
+            <div class="portfolio-item col-sm-4">
                 <a href="https://secure-brushlands-04759.herokuapp.com/">
-                <img src="assets/subscriptionTracker.PNG" height="150px" width="180px" alt="game design work">
+                <img src="assets/subscriptionTracker.PNG" height="150px" width="180px" alt="subs tracker">
                 <p>Bill and Subscription Tracker</p>
                 </a>
                 <a href="https://github.com/blakshep1981/Bill-and-Subscription-Reminder-Application">
@@ -54,9 +55,9 @@
                 </a>
             </div>
 
-            <div class="col-sm-4">
+            <div class="portfolio-item col-sm-4">
               <a href="https://boxing-beaver-85498.herokuapp.com/">
-              <img src="assets/burger.png" height="150px" width="180px" alt="game design work">
+              <img src="assets/burger.png" height="150px" width="180px" alt="burger">
               <p>Devour The Burger!</p>
               </a>
               <a href="https://github.com/TylerinkBroeker/burger.homework13">
@@ -64,6 +65,35 @@
               </a>
             </div>
 
+            <div class="portfolio-item col-sm-4">
+              <a href="https://tylerinkbroeker.github.io/passwordGenerator.homework3/">
+              <img src="assets/password.PNG" height="150px" width="180px" alt="password generator">
+              <p>Password Generator</p>
+              </a>
+              <a href="https://github.com/TylerinkBroeker/passwordGenerator.homework3">
+                <p>GitHub Repository</p>
+              </a>
+            </div>
+
+            <div class="portfolio-item col-sm-4">
+              <a href="https://tylerinkbroeker.github.io/planner.homework5/">
+              <img src="assets/scheduler.PNG" height="150px" width="180px" alt="Scheduler">
+              <p>Work Day Scheduler</p>
+              </a>
+              <a href="https://github.com/TylerinkBroeker/planner.homework5">
+                <p>GitHub Repository</p>
+              </a>
+            </div>
+
+            <div class="portfolio-item col-sm-4">
+              <a href="https://tylerinkbroeker.github.io/weatherapp.homework6/">
+              <img src="assets/weatherapp.PNG" height="150px" width="180px" alt="weather app">
+              <p>Weather Tracker</p>
+              </a>
+              <a href="https://github.com/TylerinkBroeker/weatherapp.homework6">
+                <p>GitHub Repository</p>
+              </a>
+            </div>
         </main>
     </section>
 
