added a placeholder on the navbar for a resume to be uploaded

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,12 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="upcomingfeatures.html">
+                Resume
+                <img src="assets/resumeIcon.png" alt="resume" height="25px" width="25px">
+              </a>
+            </li>
           </ul>
         </div>
     </nav>
