--- a/upcomingfeatures.html
+++ b/upcomingfeatures.html
@@ -35,6 +35,10 @@
             <h1>Nothing here yet...</h1>
             <hr>
             <h3>Not even on the navbar</h3>
+            <p>I need to actually write out a resume, and considering I dropped out of college and have never worked in this
+              industry I am going to need to need to meet with someone in career services. But for the sake of this homework
+              this is it...
+            </p>
         </section>
     </body>
 
