--- a/index.html
+++ b/index.html
@@ -28,30 +28,36 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="upcomingfeatures.html">
+                Resume
+                <img src="assets/resumeIcon.png" alt="resume" height="25px" width="25px">
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
 
       <section class="container content-box">
-        <h1>About Me</h1>
-        <hr>
-        <main>
-            <img class="wrap" src="assets/outdatedpic.jpg" alt="outdated picture" height="150px" width="160px" HSPACE="10px" align=left>
-            <p>
-                I was born and raised in Miami, Florida. My hobbies include hiking, camping, playing video games and anything else that I can find entertaining for at least a few minutes.
-            </p>
-            <p>
-                I dabbled while in college, tryng things from acting to coding, bio to archaeology, never really settling on any one subject until I finally decided I had no idea what I wanted to do and withdrew.
-            </p>
-            <p>
-                Since then I have been trying things and working for the almighty dollar and have finally decided that I wanted to do something more fulfilling and could pay for my constant dabbling.
-            </p>
-            <p>
-                After a lot of research I found myself joining this bootcamp to try to more fully immerse myself in a skill I had only dipped my toes in previously.
-            </p>
-
-        </main>
-
+        <div class="container">
+          <h1>About Me</h1>
+          <hr>
+          <main>
+              <img class="wrap" src="assets/outdatedpic.jpg" alt="outdated picture" height="150px" width="160px" HSPACE="10px" align=left>
+              <p>
+                  I was born and raised in Miami, Florida. My hobbies include hiking, camping, playing video games and anything else that I can find entertaining for at least a few minutes.
+              </p>
+              <p>
+                  I dabbled while in college, tryng things from acting to coding, bio to archaeology, never really settling on any one subject until I finally decided I had no idea what I wanted to do and withdrew.
+              </p>
+              <p>
+                  Since then I have been trying things and working for the almighty dollar and have finally decided that I wanted to do something more fulfilling and could pay for my constant dabbling.
+              </p>
+              <p>
+                  After a lot of research I found myself joining this bootcamp to try to more fully immerse myself in a skill I had only dipped my toes in previously.
+              </p>
+          </main>
+        </div>
       </section>
 
     <footer class="content-box page-footer pt-4 text-center">
