--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,6 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="upcomingfeatures.html">
-                Resume
-                <img src="assets/resumeIcon.png" alt="resume" height="25px" width="25px">
-              </a>
-            </li>
           </ul>
         </div>
     </nav>
@@ -52,11 +46,11 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-                <a href="https://secure-brushlands-04759.herokuapp.com/">
-                <img src="assets/subscriptionTracker.PNG" height="150px" width="180px" alt="subs tracker">
-                <p>Bill and Subscription Tracker</p>
+                <a href="https://shrouded-lowlands-66828.herokuapp.com/">
+                <img src="assets/empDir.png" height="150px" width="180px" alt="subs tracker">
+                <p>Employee Directory</p>
                 </a>
-                <a href="https://github.com/blakshep1981/Bill-and-Subscription-Reminder-Application">
+                <a href="https://github.com/TylerinkBroeker/employee-directory">
                   <p>GitHub Repository</p>
                 </a>
             </div>
