--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -35,9 +35,7 @@
 
 
     <section class="container content-box">
-        <h1>Contact form</h1>
-        <div class="status"></div>
-        <hr>
+
 
         <div class="row">
 
