--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="portfolio.html">Portfolio</a>
@@ -32,8 +32,7 @@
     </nav>
 
     <section class="container content-box">
-        <h1>My Portfolio</h1>
-        <hr>
+
         <main class="row text-center">
             <div class="portfolio-item col-sm-4">
                 <a href="https://alexastef.github.io/ThatsTheSpirit/">
