added descriptions to portfolio items, as well as 3rd party .js file to add a pop-up window to portfolio apps containing descriptions.

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
         <main class="row text-center">
             <div class="portfolio-item col-sm-4">
-                <a href="https://alexastef.github.io/ThatsTheSpirit/">
+                <a onmouseover="nhpup.popup('Spirit-focused app for users to find new drink and music ideas.');" href="https://alexastef.github.io/ThatsTheSpirit/">
                 <img src="assets/theSpirit.png" height="150px" width="180px" alt="the spirit">
                 <p>That's The Spirit</p>
                 </a>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-                <a href="https://shrouded-lowlands-66828.herokuapp.com/">
+                <a onmouseover="nhpup.popup('Use this directory to search and sort employees by name to see full name, email, cell phone, and a small profile picture.');" href="https://shrouded-lowlands-66828.herokuapp.com/">
                 <img src="assets/empDir.png" height="150px" width="180px" alt="subs tracker">
                 <p>Employee Directory</p>
                 </a>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-              <a href="https://boxing-beaver-85498.herokuapp.com/">
+              <a onmouseover="nhpup.popup('A test of handlebars and ORM comprehension, this app uses these tools to add, update and delete items from a MySQL database.');" href="https://boxing-beaver-85498.herokuapp.com/">
               <img src="assets/burger.png" height="150px" width="180px" alt="burger">
               <p>Devour The Burger!</p>
               </a>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-              <a href="https://tylerinkbroeker.github.io/passwordGenerator.homework3/">
+              <a onmouseover="nhpup.popup('A small application that takes user input and generates a random string of characters to be used as a password.');" href="https://tylerinkbroeker.github.io/passwordGenerator.homework3/">
               <img src="assets/password.PNG" height="150px" width="180px" alt="password generator">
               <p>Password Generator</p>
               </a>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-              <a href="https://tylerinkbroeker.github.io/planner.homework5/">
+              <a onmouseover="nhpup.popup('A simple application that gives the user the ability to write and save notes for each hour of a day using local storage. The current time, day, month and year are displayed at the top along with the user’s time zone.');" href="https://tylerinkbroeker.github.io/Fan-task-tic/">
               <img src="assets/scheduler.PNG" height="150px" width="180px" alt="Scheduler">
               <p>Work Day Scheduler</p>
               </a>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="portfolio-item col-sm-4">
-              <a href="https://tylerinkbroeker.github.io/weatherapp.homework6/">
+              <a onmouseover="nhpup.popup('View current weather and 5 day forcast for any city on this weather dashboard app.');" href="https://tylerinkbroeker.github.io/weatherapp.homework6/">
               <img src="assets/weatherapp.PNG" height="150px" width="180px" alt="weather app">
               <p>Weather Tracker</p>
               </a>
@@ -110,6 +110,12 @@
       </div>
     </footer>
 
+
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="nhpup_1.1.js"></script>
 </body>
 
 </html>
